// SPDX-FileCopyrightText: Copyright (c) 2021-2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: LicenseRef-NvidiaProprietary
//
// NVIDIA CORPORATION, its affiliates and licensors retain all intellectual
// property and proprietary rights in and to this material, related
// documentation and any modifications thereto. Any use, reproduction,
// disclosure or distribution of this material and related documentation
// without an express license agreement from NVIDIA CORPORATION or
// its affiliates is strictly prohibited.
//

syntax = "proto3";

package common;

option go_package = "github.com/nvidia/carbide-rest-api-snapshot/carbide-rest-api-schema/proto";

message MachineId {
  string id = 1;
}

message MachineIdList {
  repeated MachineId machine_ids = 1;
}

message UUID {
  string value = 1;
}

message Uint32List {
  repeated uint32 items = 1;
}
